--- a/assets/css/corpo-style.css
+++ b/assets/css/corpo-style.css
@@ -29,9 +29,9 @@ h2 {
   height: 100%;
   width: 100%;
   margin: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "item item item" "item item item" "item item item";
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -40,20 +40,6 @@ h2 {
       -ms-flex-direction: column;
           flex-direction: column;
   padding-bottom: 5%;
-}
-
-.organizacao {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: auto;
-  margin-top: 50px;
 }
 
 .codigos h3 {
