--- a/assets/css/corpo-style.css
+++ b/assets/css/corpo-style.css
@@ -42,6 +42,11 @@ h2 {
   padding-bottom: 5%;
 }
 
+.item {
+  padding: 20px 10px 20px 10px;
+  grid-area: "item";
+}
+
 .codigos h3 {
   margin-top: 5px;
 }
@@ -138,5 +143,17 @@ h2 {
 
 .codigos.eca:hover {
   border: 2px solid #24b9ea;
+}
+
+@media (max-width: 750px) {
+  #codigos {
+        grid-template-areas: "item item" "item item" "item item" "item item";
+  }
+}
+
+@media (max-width: 400px) {
+  #codigos {
+        grid-template-areas: "item" "item" "item" "item" "item" "item" "item" "item" "item";
+  }
 }
 /*# sourceMappingURL=corpo-style.css.map */
