--- a/assets/css/corpo-style.scss
+++ b/assets/css/corpo-style.scss
@@ -25,10 +25,14 @@ h2{
     "item item item"
     "item item item"
     "item item item";
-    
+
     align-items: center;
     flex-direction: column;
     padding-bottom: 5%;
+}
+.item{
+    padding: 20px 10px 20px 10px;
+    grid-area: "item";
 }
 .codigos h3{
     margin-top: 5px;
@@ -98,4 +102,30 @@ h2{
 }
 .codigos.eca:hover{
     border: 2px solid #24b9ea;
+}
+
+
+@media (max-width: 750px){
+    #codigos{
+        grid-template-areas: 
+        "item item"
+        "item item"
+        "item item"
+        "item item";
+    }
+}
+
+@media (max-width: 400px){
+    #codigos{
+        grid-template-areas: 
+        "item"
+        "item"
+        "item"
+        "item"
+        "item"
+        "item"
+        "item"
+        "item"
+        "item";
+    }
 }
