Probelma de falha no hostGator resolvido e identico ao antigo commit

--- a/assets/css/corpo-style.css
+++ b/assets/css/corpo-style.css
@@ -71,6 +71,8 @@ h2 {
   color: black;
   text-decoration: none;
   border: 2px solid #1A1A1A;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
 }
 
 .codigos.cc {
