--- a/assets/css/corpo-style.scss
+++ b/assets/css/corpo-style.scss
@@ -48,6 +48,7 @@ h2{
     color: black;
     text-decoration: none;
     border: 2px solid #1A1A1A;
+    transition: 0.5s ease;
 }
 .codigos.cc{
     background-color: #479bc6;
